--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,8 +28,10 @@
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
+    "react-thunk": "^1.0.0",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
   },
@@ -60,5 +62,7 @@
   "proxy": "http://localhost:6000",
   "devDependencies": {
     "tailwindcss": "^3.3.2"
-  }
+  },
+  "main": "index.js",
+  "license": "MIT"
 }
