--- a/frontend/package.json
+++ b/frontend/package.json
@@ -64,5 +64,7 @@
     "tailwindcss": "^3.3.2"
   },
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "author": ""
 }
