--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook": "^0.0.1",
+    "react-icons": "^4.9.0",
     "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-quill": "^2.0.0",
     "react-redux": "^8.0.7",
