--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,7 @@
     "react-hook": "^0.0.1",
     "react-icons": "^4.9.0",
     "react-pro-sidebar": "^1.1.0-alpha.1",
-    "react-quill": "^2.0.0",
+    "react-quill": "^2.0.0-beta.4",
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
