--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^18.2.11",
     "axios": "^1.1.3",
     "formik": "^2.4.1",
+    "js-cookie": "^3.0.5",
     "moment": "^2.29.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
